fix title overflow for small screens

--- a/src/app/views/partials/layout/admin-list-portlet/admin-list-portlet.component.scss
+++ b/src/app/views/partials/layout/admin-list-portlet/admin-list-portlet.component.scss
@@ -3,7 +3,7 @@
     &>.tf-portlet{
 
         .tf-portlet__head .tf-portlet__head-label {
-            max-width: 75%;
+            max-width: 70%;
         }
 
         &.collapsed {
